# BallonsTranslator

./: Ballons.cmd  pyproject.toml
modules/translators/: trans_removetext.py
ui/: drawingpanel.py  fontformatpanel.py  mainwindow.py  scenetext_manager.py
utils/: __main__.py
